# python-project-49

./: Makefile  README.md  pyproject.toml
brain_games/: even_game.py  game_engine.py
brain_games/games/: calc.py  common.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
